corrected datetime error module import

--- a/binance-multi-timeframe-grade-opt.ipynb
+++ b/binance-multi-timeframe-grade-opt.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwD5yOjkfhJDgZV3Ia3yoD",
+      "machine_shape": "hm",
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyPGqqdEe1cr2rvLz33AfIFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,22 +42,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZkp-JVxXjc6",
-        "outputId": "6860c960-92e2-41b4-93a4-48cf5692ca08"
+        "outputId": "eec80073-e8cf-4c14-c4e7-88eb70353f6e"
       },
-      "execution_count": 22,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pandas-ta in /usr/local/lib/python3.11/dist-packages (0.3.14b0)\n",
+            "Collecting pandas-ta\n",
+            "  Downloading pandas_ta-0.3.14b.tar.gz (115 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/115.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.1/115.1 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from pandas-ta) (2.2.2)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas->pandas-ta) (1.26.4)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->pandas-ta) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->pandas-ta) (2025.1)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->pandas-ta) (2025.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->pandas-ta) (1.17.0)\n",
-            "Requirement already satisfied: backtrader[plotting] in /usr/local/lib/python3.11/dist-packages (1.9.78.123)\n",
+            "Building wheels for collected packages: pandas-ta\n",
+            "  Building wheel for pandas-ta (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pandas-ta: filename=pandas_ta-0.3.14b0-py3-none-any.whl size=218909 sha256=b41d5608f3cab13ff230b0683206835e13752c6d6d6892aeb77c8822095dd20b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/7f/33/8b/50b245c5c65433cd8f5cb24ac15d97e5a3db2d41a8b6ae957d\n",
+            "Successfully built pandas-ta\n",
+            "Installing collected packages: pandas-ta\n",
+            "Successfully installed pandas-ta-0.3.14b0\n",
+            "Collecting backtrader[plotting]\n",
+            "  Downloading backtrader-1.9.78.123-py2.py3-none-any.whl.metadata (6.8 kB)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from backtrader[plotting]) (3.10.0)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->backtrader[plotting]) (1.3.1)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->backtrader[plotting]) (0.12.1)\n",
@@ -66,6 +80,10 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->backtrader[plotting]) (3.2.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->backtrader[plotting]) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->backtrader[plotting]) (1.17.0)\n",
+            "Downloading backtrader-1.9.78.123-py2.py3-none-any.whl (419 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m419.5/419.5 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: backtrader\n",
+            "Successfully installed backtrader-1.9.78.123\n",
             "Requirement already satisfied: plotly in /usr/local/lib/python3.11/dist-packages (5.24.1)\n",
             "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly) (9.0.0)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from plotly) (24.2)\n",
@@ -139,7 +157,7 @@
       "metadata": {
         "id": "dtUTSBApSZe4"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -155,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ELE8dAggI0FQ",
-        "outputId": "21145a0a-5674-4e29-d685-0d90bf51ccfb"
+        "outputId": "bb883c40-8e50-48df-a879-b12b7ba097f3"
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +197,7 @@
       "metadata": {
         "id": "Fs_TurcmdJql"
       },
-      "execution_count": 25,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -265,7 +283,7 @@
       "metadata": {
         "id": "r0DdxBTXLcao"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -293,7 +311,7 @@
       "metadata": {
         "id": "C92jSivqMCPe"
       },
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -354,7 +372,7 @@
       "metadata": {
         "id": "551o_MKlZhr2"
       },
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -424,7 +442,7 @@
       "metadata": {
         "id": "Ozb2WlKwCCOB"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -494,7 +512,7 @@
       "metadata": {
         "id": "Rp7SlrZXaupS"
       },
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -537,7 +555,7 @@
       "metadata": {
         "id": "8nz7qqCsit1b"
       },
-      "execution_count": 31,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -549,7 +567,7 @@
       "metadata": {
         "id": "t9eNtD9QgvIa"
       },
-      "execution_count": 32,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -577,7 +595,7 @@
       "metadata": {
         "id": "77dtP0gVDcVF"
       },
-      "execution_count": 33,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -609,7 +627,7 @@
       "metadata": {
         "id": "PYV3ovEs6j_w"
       },
-      "execution_count": 34,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -638,7 +656,7 @@
       "metadata": {
         "id": "UxAXoG8PE9je"
       },
-      "execution_count": 35,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -725,7 +743,7 @@
       "metadata": {
         "id": "SvTq9isY3ctm"
       },
-      "execution_count": 36,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -742,7 +760,7 @@
       "metadata": {
         "id": "gRqdeATXlKaO"
       },
-      "execution_count": 37,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -778,7 +796,7 @@
       "metadata": {
         "id": "Y1RTvfAxGxYu"
       },
-      "execution_count": 38,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -863,7 +881,7 @@
       "metadata": {
         "id": "8eAPe1BN4bO-"
       },
-      "execution_count": 39,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -912,7 +930,7 @@
       "metadata": {
         "id": "ySNwgm17Ce54"
       },
-      "execution_count": 40,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -939,7 +957,7 @@
       "metadata": {
         "id": "XQkkV3Y2KpLx"
       },
-      "execution_count": 41,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -978,7 +996,7 @@
       "metadata": {
         "id": "XJU3s2FgYVaF"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -991,7 +1009,7 @@
         "  'start_date': '01-01-2024',\n",
         "  'end_date': '28-02-2025' ,\n",
         "  'pivot_windows': 10,\n",
-        "  'version': 'v1',\n",
+        "  'version': 'v1_0_1',\n",
         "  'middle_timeframe': '1h',\n",
         "  'higher_timeframe': '4h',\n",
         "  'seq_length': 100\n",
@@ -1000,7 +1018,7 @@
       "metadata": {
         "id": "i2eIpKkrnB80"
       },
-      "execution_count": 43,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1260,13 +1278,13 @@
       "metadata": {
         "id": "EjeV2AzvnY1Q"
       },
-      "execution_count": 44,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "evaluate_periods =  [(datetime(x,1,1), datetime(x,1,1) + timedelta(days=365*3)) for x in range(2017,2024)]\n",
+        "evaluate_periods =  [(datetime.datetime(x,1,1), datetime.datetime(x,1,1) + datetime.timedelta(days=365*5)) for x in range(2017,2021)]\n",
         "for start_date, end_date in evaluate_periods:\n",
         "  options['start_date'] = start_date.strftime('%d-%m-%Y')\n",
         "  options['end_date'] = end_date.strftime('%d-%m-%Y')\n",
@@ -1274,7 +1292,34 @@
         "  generate_model(**options)"
       ],
       "metadata": {
-        "id": "rI-yYG2aR3sS"
+        "id": "rI-yYG2aR3sS",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 367
+        },
+        "outputId": "1430bf74-a760-4e06-fa1f-634c299509cb"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'module' object is not callable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-24-a61571aa174d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mevaluate_periods\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m365\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2021\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mevaluate_periods\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'end_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Evaluating from {start_date} to {end_date}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-24-a61571aa174d>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mevaluate_periods\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m365\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2021\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mevaluate_periods\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'end_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Evaluating from {start_date} to {end_date}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vCPvy25Qwwyq"
       },
       "execution_count": null,
       "outputs": []
