fix unsaved changes

--- a/binance-multi-timeframe-grade-opt.ipynb
+++ b/binance-multi-timeframe-grade-opt.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100",
-      "authorship_tag": "ABX9TyPGqqdEe1cr2rvLz33AfIFE",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOwY1S9QJrtLqI5s9K1JFYu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZkp-JVxXjc6",
-        "outputId": "eec80073-e8cf-4c14-c4e7-88eb70353f6e"
+        "outputId": "75f37b19-781a-4617-c9ee-8d3d2c62a0c9"
       },
       "execution_count": 1,
       "outputs": [
@@ -52,7 +52,7 @@
           "text": [
             "Collecting pandas-ta\n",
             "  Downloading pandas_ta-0.3.14b.tar.gz (115 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/115.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.1/115.1 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/115.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.1/115.1 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from pandas-ta) (2.2.2)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas->pandas-ta) (1.26.4)\n",
@@ -62,7 +62,7 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->pandas-ta) (1.17.0)\n",
             "Building wheels for collected packages: pandas-ta\n",
             "  Building wheel for pandas-ta (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pandas-ta: filename=pandas_ta-0.3.14b0-py3-none-any.whl size=218909 sha256=b41d5608f3cab13ff230b0683206835e13752c6d6d6892aeb77c8822095dd20b\n",
+            "  Created wheel for pandas-ta: filename=pandas_ta-0.3.14b0-py3-none-any.whl size=218909 sha256=96171799b1aae162918c4843515e3e0f6986274cee3e6dd81584ae8203e67082\n",
             "  Stored in directory: /root/.cache/pip/wheels/7f/33/8b/50b245c5c65433cd8f5cb24ac15d97e5a3db2d41a8b6ae957d\n",
             "Successfully built pandas-ta\n",
             "Installing collected packages: pandas-ta\n",
@@ -81,7 +81,7 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->backtrader[plotting]) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->backtrader[plotting]) (1.17.0)\n",
             "Downloading backtrader-1.9.78.123-py2.py3-none-any.whl (419 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m419.5/419.5 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m419.5/419.5 kB\u001b[0m \u001b[31m25.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: backtrader\n",
             "Successfully installed backtrader-1.9.78.123\n",
             "Requirement already satisfied: plotly in /usr/local/lib/python3.11/dist-packages (5.24.1)\n",
@@ -173,7 +173,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ELE8dAggI0FQ",
-        "outputId": "bb883c40-8e50-48df-a879-b12b7ba097f3"
+        "outputId": "272944c0-400d-420d-b361-d5144f24d422"
       },
       "execution_count": 3,
       "outputs": [
@@ -925,12 +925,50 @@
         "    # Save data to Firestore\n",
         "    doc_ref = db.collection(collection_name).document()\n",
         "    doc_ref.set(data)\n",
-        "    print(f\"Data saved to Firestore: Collection={collection_name}, Document ID={doc_ref.id}\")"
+        "    print(f\"Data saved to Firestore: Collection={collection_name}, Document ID={doc_ref.id}\")\n",
+        "\n",
+        "\n",
+        "def delete_documents_by_field(project_id, collection_name, field_name, field_value, batch_size=500):\n",
+        "  \"\"\"\n",
+        "  Deletes documents in a Firestore collection where a specific field matches a value.\n",
+        "\n",
+        "  Args:\n",
+        "      collection_name: The name of the Firestore collection.\n",
+        "      field_name: The name of the field to filter by.\n",
+        "      field_value: The value to filter the field against.\n",
+        "      batch_size: The number of documents to delete in each batch.\n",
+        "  \"\"\"\n",
+        "  db = initialize_firestore(project_id)\n",
+        "  collection_ref = db.collection(collection_name)\n",
+        "\n",
+        "  try:\n",
+        "      while True:\n",
+        "          query = collection_ref.where(field_name, '==', field_value).limit(batch_size)\n",
+        "          docs = query.stream()\n",
+        "\n",
+        "          deleted_count = 0\n",
+        "          batch = db.batch()\n",
+        "\n",
+        "          for doc in docs:\n",
+        "              batch.delete(doc.reference)\n",
+        "              deleted_count += 1\n",
+        "\n",
+        "          if deleted_count == 0:\n",
+        "              print(f\"No documents found with {field_name} == {field_value} in {collection_name}.\")\n",
+        "              break\n",
+        "\n",
+        "          batch.commit()\n",
+        "          print(f\"Deleted {deleted_count} documents from {collection_name} where {field_name} == {field_value}.\")\n",
+        "          if deleted_count < batch_size: # if less than batch size deleted, then there are no more documents matching.\n",
+        "              break\n",
+        "\n",
+        "  except Exception as e:\n",
+        "      print(f\"An error occurred: {e}\")\n"
       ],
       "metadata": {
         "id": "ySNwgm17Ce54"
       },
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -986,7 +1024,7 @@
         "        try:\n",
         "            # Attempt to perform a numeric operation to check if the value is valid\n",
         "            # For example, check if the value can be compared to a range\n",
-        "            if not (-1e100 < obj < 1e100):  # Adjust the range as needed\n",
+        "            if not (-1e15 < obj < 1e14):  # Adjust the range as needed\n",
         "                obj = 0\n",
         "        except (TypeError, ValueError):\n",
         "            # If the value is not numeric or causes an error, replace it with zero\n",
@@ -996,7 +1034,7 @@
       "metadata": {
         "id": "XJU3s2FgYVaF"
       },
-      "execution_count": 21,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1173,9 +1211,9 @@
         "  )\n",
         "\n",
         "  bactest_grid_params = generate_param_grid({\n",
-        "      'buy_threshold': [0.5, 0.6, 0.7, 0.8],\n",
-        "      'sell_threshold': [-0.5, -0.6, -0.7],\n",
-        "      'leverage': [5, 7, 10, 15, 20, 25],\n",
+        "      'buy_threshold': [0.3, 0.4, 0.5, 0.6, 0.7,],\n",
+        "      'sell_threshold': [-0.3, -0.4, -0.5, -0.6, -0.7],\n",
+        "      'leverage': [10, 15, 20, 25, 30],\n",
         "  })\n",
         "\n",
         "  for param in bactest_grid_params:\n",
@@ -1228,11 +1266,12 @@
         "    strat = backtest_result[0]\n",
         "\n",
         "    trade_analysis = make_dict_even(strat.analyzers.tradeanalyzer.get_analysis())\n",
-        "    # Errors of large numbers, fix\n",
         "    trade_analysis = fix_out_of_range_values(trade_analysis)\n",
         "\n",
         "    drawdown_analysis = make_dict_even(strat.analyzers.drawdown.get_analysis())\n",
+        "    drawdown_analysis = fix_out_of_range_values(drawdown_analysis)\n",
         "    sharpe_analysis = make_dict_even(strat.analyzers.sharpe.get_analysis())\n",
+        "    sharpe_analysis = fix_out_of_range_values(sharpe_analysis)\n",
         "\n",
         "    analysis_result = {\n",
         "        'timeframe': timeframe,\n",
@@ -1278,7 +1317,7 @@
       "metadata": {
         "id": "EjeV2AzvnY1Q"
       },
-      "execution_count": 23,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1294,35 +1333,38 @@
       "metadata": {
         "id": "rI-yYG2aR3sS",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 367
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1430bf74-a760-4e06-fa1f-634c299509cb"
+        "outputId": "ad2ab2d7-a653-4661-b2bc-8462d3bdc0e0"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'module' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-a61571aa174d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mevaluate_periods\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m365\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2021\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mevaluate_periods\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'end_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Evaluating from {start_date} to {end_date}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-24-a61571aa174d>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mevaluate_periods\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m365\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2021\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mevaluate_periods\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'end_date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d-%m-%Y'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Evaluating from {start_date} to {end_date}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Evaluating from 2017-01-01 00:00:00 to 2021-12-31 00:00:00\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/rnn/rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(**kwargs)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m3049/3049\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 13ms/step - loss: 0.3256 - mae: 0.4872 - val_loss: 0.2829 - val_mae: 0.4501\n",
+            "Epoch 2/20\n",
+            "\u001b[1m 201/3049\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m31s\u001b[0m 11ms/step - loss: 0.2876 - mae: 0.4514"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vCPvy25Qwwyq"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
